--- a/antora.yml
+++ b/antora.yml
@@ -1,8 +1,9 @@
 name: REPLACEREPONAME
-title: REPLACE Course Title
+title: FIXME Course Title
 version: 1
 nav:
 - modules/ROOT/nav.adoc
+- modules/LABENV/nav.adoc
 - modules/chapter1/nav.adoc
 - modules/chapter2/nav.adoc
 - modules/chapter3/nav.adoc
